--- a/deep-learning/modelo.ipynb
+++ b/deep-learning/modelo.ipynb
@@ -52,6 +52,7 @@
     "from sklearn.preprocessing import LabelBinarizer\n",
     "from sklearn.model_selection import train_test_split\n",
     "from keras.preprocessing.image import ImageDataGenerator\n",
+    "from keras.utils import to_categorical\n",
     "from imutils import paths\n",
     "\n",
     "# Libs para comunicação APIs Watson IBM\n",
@@ -102,7 +103,7 @@
     "model.add(MaxPooling2D(pool_size=(2,2),strides=(2,2)))\n",
     "model.add(Flatten())\n",
     "model.add(Dense(128, activation='relu'))\n",
-    "model.add(Dense(2, activation='sigmoid'))\n",
+    "model.add(Dense(2, activation='softmax'))\n",
     "\n",
     "model.compile(loss='binary_crossentropy',\n",
     "              optimizer='adam',\n",
@@ -137,7 +138,12 @@
     "    image = img_to_array(image)\n",
     "    data.append(image)\n",
     "    label = imagePath.split(os.path.sep)[-2]\n",
-    "    labels.append(label)"
+    "    if label == 'CLEAN':\n",
+    "        labels.append(0)\n",
+    "    else:\n",
+    "        labels.append(1)\n",
+    "\n",
+    "labels = to_categorical(labels)"
    ]
   },
   {
@@ -200,7 +206,7 @@
     "    aug.flow(trainX, trainY, batch_size=16),\n",
     "    validation_data=(testX, testY),\n",
     "    steps_per_epoch=len(trainX) // 16,\n",
-    "    epochs=40)"
+    "    epochs=5)"
    ]
   },
   {
@@ -278,12 +284,12 @@
    "source": [
     "# Credenciais do Watson Machine Learning\n",
     "wml_credentials  = {\n",
-    "  \"apikey\": \"XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX\",\n",
-    "  \"iam_apikey_description\": \"Auto-generated for key XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX\",\n",
-    "  \"iam_apikey_name\": \"wdp-writer\",\n",
+    "  \"apikey\": \"B-H331DpFRKwapGsKOLjOBrnShvRCOQxokLvTbqM2OTq\",\n",
+    "  \"iam_apikey_description\": \"Auto-generated for key 7656e9f2-8d10-4aac-8835-2a183c7ca529\",\n",
+    "  \"iam_apikey_name\": \"Service credentials-1\",\n",
     "  \"iam_role_crn\": \"crn:v1:bluemix:public:iam::::serviceRole:Writer\",\n",
-    "  \"iam_serviceid_crn\": \"crn:v1:bluemix:public:iam-identity::a/XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX::serviceid:ServiceId-XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX\",\n",
-    "  \"instance_id\": \"XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX\",\n",
+    "  \"iam_serviceid_crn\": \"crn:v1:bluemix:public:iam-identity::a/937d67259267496fadc43cff02e98393::serviceid:ServiceId-798b34ac-5d97-4958-be7f-01ae51b9c17b\",\n",
+    "  \"instance_id\": \"6d54ebaf-26c9-43a4-b69c-e9b8e30c138a\",\n",
     "  \"url\": \"https://us-south.ml.cloud.ibm.com\"\n",
     "}\n",
     "client = WatsonMachineLearningAPIClient( wml_credentials )\n",
@@ -352,10 +358,10 @@
     "model_result = client.deployments.score( ai_parms[\"model_endpoint_url\"], model_payload )\n",
     "print(model_result)\n",
     "\n",
-    "print(\"\\nImagem Classificada como : \", classes[model_result['values'][0][1][0]])\n",
+    "print(\"\\nImagem Classificada como : \", classes[model_result['values'][0][1]])\n",
     "\n",
     "print(\"\\nProbabilidades : \\n\\t\",\n",
-    "      classes[model_result['values'][0][1][0]],\" : %.2f\" %(model_result['values'][0][0][0]*100),\"%\\n\\t\",\n",
+    "      classes[model_result['values'][0][1]],\" : %.2f\" %(model_result['values'][0][0][0]*100),\"%\\n\\t\",\n",
     "     )"
    ]
   },
